fix <details> arrow showing on safari

--- a/src/components/unstyled/dropdown.css
+++ b/src/components/unstyled/dropdown.css
@@ -37,3 +37,6 @@
 .dropdown:focus-within .dropdown-content {
   @apply visible opacity-100;
 }
+.dropdown:is(details) summary::-webkit-details-marker {
+  @apply hidden;
+}
